--- a/docs/docs/api/template-engine/conditionals.mdx
+++ b/docs/docs/api/template-engine/conditionals.mdx
@@ -1,6 +1,6 @@
 ---
-pagination_next: api/template-engine/conditionals
-pagination_prev: api/template-engine/loops
+pagination_next: api/template-engine/loops
+pagination_prev: api/template-engine/interpolation
 sidebar_position: 3
 ---
 
@@ -11,6 +11,8 @@ import TabItem from '@theme/TabItem';
 
 # Conditionals
 
+## Usage
+
 <Tabs>
 
 <TabItem value="block" label="Block">
@@ -18,10 +20,10 @@ import TabItem from '@theme/TabItem';
 ```text
 {{{? <condition> }}}
 if output
-{{{?? <condition> }}} // optional
+{{{?? <else-if-condition> }}}
 else if output
-{{{??}}} # optional
-conditional output
+{{{??}}}
+else output
 {{{?}}}
 ```
 
@@ -30,7 +32,7 @@ conditional output
 <TabItem value="inline" label="Inline">
 
 ```text
-{{= <expressions...> }}
+{{? <condition> }}if output{{?? <else-if-condition> }}else if output{{??}}else{{?}}
 ```
 
 </TabItem>
@@ -38,6 +40,291 @@ conditional output
 
 ## Examples
 
-### ....
+### Using a if statement
 
-....
+<Tabs>
+<TabItem value="block" label="Block">
+
+Take this template below that is using a block if statement to conditionally
+render an css import when the `css` answer is `true`
+
+<Dot
+	tps={{name: "react-component", answers: {css: true}}} 
+	lang="typescript"
+	templateMeta='{2-4}'
+	resultMeta='{2}'
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.css }}}
+import "styles.css";
+{{{?}}}
+```
+
+</Dot>
+
+Now when `css` is `false`
+
+<Dot
+	tps={{name: "react-component", answers: {css: false}}} 
+	lang="typescript"
+	displayTemplate={false}
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.css }}}
+import "styles.css";
+{{{?}}}
+```
+
+</Dot>
+
+</TabItem>
+
+<TabItem value="inline" label="Inline">
+
+Take this template that is using a inline if statement to conditionally add a
+typescript type to the variable when the `typescript` answer is `true`
+
+<Dot 
+	lang="typescript"
+	tps={{name: "react-component", answers: {typescript: true}}}
+>
+
+```text
+const name{{? tps.answers.typescript }}: string{{?}} = 'lino';
+```
+
+</Dot>
+
+Now when `typescript` is `false`
+
+<Dot
+	tps={{name: "react-component", answers: {typescript: false}}}
+	lang="typescript"
+	displayTemplate={false}
+>
+
+```text
+const name{{? tps.answers.typescript }}: string{{?}} = 'lino';
+```
+
+</Dot>
+
+</TabItem>
+</Tabs>
+
+### Using else statements
+
+<Tabs>
+<TabItem value="block" label="Block">
+
+Take this template that is using a block if else statement to conditionally
+render a import statement that would be compatible with css modules when
+`cssLang` is `modules` else will render a normal css import statement.
+
+<Dot
+	lang="typescript"
+	tps={{name: "footer", answers: { cssLang: "modules"}}}
+	templateMeta='{2-6}'
+	resultMeta='{2}'
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.cssLang === 'modules'}}}
+import styles from './{{= tps.name}}.css';
+{{{??}}}
+import './{{= tps.name}}.css';
+{{{?}}}
+```
+
+</Dot>
+
+Now when `cssLang` is **not** `modules`
+
+<Dot
+	lang="typescript"
+	tps={{name: "footer", answers: { cssLang: "less"}}}
+	displayTemplate={false}
+	resultMeta='{2}'
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.cssLang === 'modules'}}}
+import styles from './{{= tps.name}}.css';
+{{{??}}}
+import './{{= tps.name}}.css';
+{{{?}}}
+```
+
+</Dot>
+
+</TabItem>
+
+<TabItem value="inline" label="Inline">
+
+Take this template that is using a inline if else statement to conditionally
+render a dynamic tag name when present else will render a `div`.
+
+<Dot
+	tps={{name: "react-component", answers: { component: "Page" }}}
+	lang="tsx"
+	templateMeta='{3,5}'
+>
+
+```text
+const App = () => {
+	return (
+		<{{? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+			/* contents... */
+		</{{? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+	);
+};
+```
+
+</Dot>
+
+</TabItem>
+</Tabs>
+
+### Using else if statements
+
+<Tabs>
+<TabItem value="block" label="Block">
+
+Take this template using a block if statement to conditonally render a
+compatible css module import when `cssLang` is `modules`.
+
+<Dot
+	lang="typescript" 
+	tps={{name: "footer", answers: { cssLang: "modules", css: true}}}
+	templateMeta='{4-5}'
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.cssLang === 'modules'}}}
+import styles from './{{= tps.name}}.css';
+{{{?? tps.answers.css }}}
+import from './{{= tps.name}}.css';
+{{{?}}}
+```
+
+</Dot>
+
+Now when `cssLang` is not `modules` and `css` is `true` then you will get the
+following:
+
+<Dot
+	lang="typescript" 
+	tps={{name: "footer", answers: { cssLang: "other", css: true}}}
+	templateMeta='{4-5}'
+	displayTemplate={false}
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.cssLang === 'modules'}}}
+import styles from './{{= tps.name}}.css';
+{{{?? tps.answers.css }}}
+import from './{{= tps.name}}.css';
+{{{?}}}
+```
+
+</Dot>
+
+Lastly when `cssLang` is not `modules` and `css` is `false` then you will get no
+rendered output
+
+<Dot
+	lang="typescript" 
+	tps={{name: "footer", answers: { cssLang: "other", css: false}}}
+	templateMeta='{4-5}'
+	displayTemplate={false}
+>
+
+```text
+import React from 'react';
+{{{? tps.answers.cssLang === 'modules'}}}
+import styles from './{{= tps.name}}.css';
+{{{?? tps.answers.css }}}
+import from './{{= tps.name}}.css';
+{{{?}}}
+```
+
+</Dot>
+
+</TabItem>
+
+<TabItem value="inline" label="Inline">
+
+Take this template using a inline if statement to conditonally render the
+`PageComponent` with a `block` prop when the `component` answer is `page`.
+
+<Dot
+	tps={{name: "react-component", answers: { component: "page" }}}
+	lang="tsx"
+	templateMeta='{3}'
+>
+
+```text
+const App = () => {
+	return (
+		<{{? tps.answers.component === 'page' }}PageComponent block{{?? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+			/* contents... */
+		</{{? tps.answers.component === 'page' }}PageComponent{{?? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+	);
+};
+```
+
+</Dot>
+
+Now when the `component` answer is not `page`, it will use whatever the user
+passed into it. In this case we passed in `Box`.
+
+<Dot
+	tps={{name: "react-component", answers: { component: "Box" }}}
+	lang="tsx"
+	templateMeta='{3}'
+	displayTemplate={false}
+>
+
+```text
+const App = () => {
+	return (
+		<{{? tps.answers.component === 'page' }}PageComponent block{{?? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+			/* contents... */
+		</{{? tps.answers.component === 'page' }}PageComponent{{?? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+	);
+};
+```
+
+</Dot>
+
+lastly is no answer was given for `component` then it would default to a `div`
+
+<Dot
+	tps={{name: "react-component"}}
+	lang="tsx"
+	templateMeta='{3}'
+	displayTemplate={false}
+>
+
+```text
+const App = () => {
+	return (
+		<{{? tps.answers.component === 'page' }}PageComponent block{{?? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+			/* contents... */
+		</{{? tps.answers.component === 'page' }}PageComponent{{?? tps.answers.component }}{{= tps.answers.component }}{{??}}div{{?}}>
+	);
+};
+```
+
+</Dot>
+
+</TabItem>
+</Tabs>
