--- a/docs/docs/api/template-engine/evaluation.mdx
+++ b/docs/docs/api/template-engine/evaluation.mdx
@@ -1,6 +1,5 @@
 ---
-pagination_next: api/template-engine/conditionals
-pagination_prev: api/template-engine/evaluation
+pagination_next: api/template-engine/interpolation
 sidebar_position: 1
 ---
 
@@ -10,6 +9,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Evaluation
+
+## Usage
 
 <Tabs>
 <TabItem value="block" label="Block">
@@ -33,7 +34,7 @@ import TabItem from '@theme/TabItem';
 
 ## Examples
 
-### Using variables
+### Defining variables
 
 <Tabs>
 <TabItem value="block" label="Block">
@@ -68,7 +69,7 @@ import TabItem from '@theme/TabItem';
 </TabItem>
 </Tabs>
 
-### Using functions
+### Defining functions
 
 <Tabs>
 <TabItem value="block" label="Block">
